--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "dunamai" %}
-{% set version = "1.17.0" %}
+{% set version = "1.24.1" %}
 
 
 package:
@@ -7,12 +7,12 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 459381b585a1e78e4070f0d38a6afb4d67de2ee95064bf6b0438ec620dde0820
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 3aa3348f77242da8628b23f11e89569343440f0f912bcef32a1fa891cf8e7215
 
 build:
-  number: 1
-  skip: True  # [py<35]
+  number: 0
+  skip: true  # [py<35]
   script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
   entry_points:
     - dunamai = dunamai.__main__:main
